--- a/Makefile.watcom
+++ b/Makefile.watcom
@@ -3,9 +3,9 @@ CC = wcc386
 LD = wlink
 CFLAGS = -bt=$(SYSTEM) -bc
 PROTOS = *.proto
-OBJS = OakProfile.pb-c.obj OakSave.pb-c.obj OakShared.pb-c.obj SaveUnpack.obj FileTranslator.obj SaveToProto.obj ItemCode.obj SaveGenerate.obj ItemLookupTest.obj ProtoToSave.obj ProfileUnpack.obj ProfileGenerate.obj ProtoToProfile.obj ProfileToProto.obj SaveConvert.obj
+OBJS = OakProfile.pb-c.obj OakSave.pb-c.obj OakShared.pb-c.obj SaveUnpack.obj FileTranslator.obj SaveToProto.obj ItemCode.obj SaveGenerate.obj ItemLookupTest.obj ProtoToSave.obj ProfileUnpack.obj ProfileGenerate.obj ProtoToProfile.obj ProfileToProto.obj SaveConvert.obj ReadSaveHeader.obj
 CPROTOS = OakProfile.pb-c.c OakSave.pb-c.c OakShared.pb-c.c
-PROGS = SaveUnpack.exe SaveToProto.exe SaveGenerate.exe ItemLookupTest.exe ProtoToSave.exe ProfileUnpack.exe ProfileGenerate.exe ProtoToProfile.exe ProfileToProto.exe SaveConvert.exe
+PROGS = SaveUnpack.exe SaveToProto.exe SaveGenerate.exe ItemLookupTest.exe ProtoToSave.exe ProfileUnpack.exe ProfileGenerate.exe ProtoToProfile.exe ProfileToProto.exe SaveConvert.exe ReadSaveHeader.exe
 LIBRARIES = csave.lib
 PREFIX = /usr/local
 PROTOCLIB = D:\\Programs\\OWC\\lib386\\protobuf-c.lib
@@ -20,11 +20,11 @@ all: $(PROGS)
 
 %.pb-c.c: %.proto
 	@echo " PROTOC   " $<
-	@protoc-c --c_out=. $<	
-	
+	@protoc-c --c_out=. $<
+
 $(LIBRARIES): $(CPROTOS) $(OBJS)
-	@wlib csave.lib +OakProfile.pb-c.obj +OakSave.pb-c.obj +OakShared.pb-c.obj +FileTranslator.obj +ItemCode.obj 
-	
+	@wlib csave.lib +OakProfile.pb-c.obj +OakSave.pb-c.obj +OakShared.pb-c.obj +FileTranslator.obj +ItemCode.obj
+
 $(PROGS): $(LIBRARIES)
 	@echo " LD    SaveUnpack"
 	@$(LD) $(LDPREFIX) file SaveUnpack.obj $(LDFLAGS)
@@ -46,6 +46,8 @@ $(PROGS): $(LIBRARIES)
 	@$(LD) $(LDPREFIX) file ProtoToProfile.obj $(LDFLAGS)
 	@echo " LD    SaveConvert"
 	@@$(LD) $(LDPREFIX) file SaveConvert.obj $(LDFLAGS)
+	@echo " LD    ReadSaveHeader"
+	@@$(LD) $(LDPREFIX) file ReadSaveHeader.obj $(LDFLAGS)
 
 clean:
 	rm -f *.obj Oak*.pb-c.* *.exe *.lib
