--- a/Makefile.watcom
+++ b/Makefile.watcom
@@ -1,26 +1,41 @@
+# CSave "Watcom Makefile"
+# (it's actually for GNU Make but I need to change it)
+
+# System declaration:
+# os2v2 = OS/2 2.0+
+# nt = Windows 32-bit
+# linux = Linux, some version
 SYSTEM = os2v2
 CC = wcc386
 LD = wlink
+
 CFLAGS = -bt=$(SYSTEM) -bc
 PROTOS = *.proto
 OBJS = OakProfile.pb-c.obj OakSave.pb-c.obj OakShared.pb-c.obj SaveUnpack.obj FileTranslator.obj SaveToProto.obj ItemCode.obj SaveGenerate.obj ItemLookupTest.obj ProtoToSave.obj ProfileUnpack.obj ProfileGenerate.obj ProtoToProfile.obj ProfileToProto.obj SaveConvert.obj ReadSaveHeader.obj
 CPROTOS = OakProfile.pb-c.c OakSave.pb-c.c OakShared.pb-c.c
 PROGS = SaveUnpack.exe SaveToProto.exe SaveGenerate.exe ItemLookupTest.exe ProtoToSave.exe ProfileUnpack.exe ProfileGenerate.exe ProtoToProfile.exe ProfileToProto.exe SaveConvert.exe ReadSaveHeader.exe
 LIBRARIES = csave.lib
-PREFIX = /usr/local
+
+# Path to your protobuf-c library
 PROTOCLIB = D:\\Programs\\OWC\\lib386\\protobuf-c.lib
 LDFLAGS = file csave.lib file $(PROTOCLIB)
 LDPREFIX = system $(SYSTEM)
 
 all: $(PROGS)
 
-%.obj: %.c
+
+.c.obj:
 	@echo " CC   " $<
 	@$(CC) $(CFLAGS) $<
 
-%.pb-c.c: %.proto
-	@echo " PROTOC   " $<
-	@protoc-c --c_out=. $<
+$(CPROTOS): $(PROTOS)
+	@echo " PROTOC  OakProfile.proto"
+        @protoc-c --c_out=. OakProfile.proto
+        @echo " PROTOC  OakSave.proto"
+        @protoc-c --c_out=. OakSave.proto
+        @echo " PROTOC  OakShared.proto"
+        @protoc-c --c_out=. OakShared.proto
+
 
 $(LIBRARIES): $(CPROTOS) $(OBJS)
 	@wlib csave.lib +OakProfile.pb-c.obj +OakSave.pb-c.obj +OakShared.pb-c.obj +FileTranslator.obj +ItemCode.obj
